--- a/stil2.css
+++ b/stil2.css
@@ -3,7 +3,7 @@
 
 @font-face {
 	font-family: "JosipKnezevic";
-	src: url("Font/JosipKnezevic.woff2") format("woff2");
+	src: url("font/JosipKnezevic.woff2") format("woff2");
 }
 
 h1 {
